# BeagleTM2

./: .gitignore  README.md  kwClimateChange_i.md  kwClimateChange_ii.md  kw_short.md  kw_short_i.md  pyproject.toml  style.css  wordsToQuery.md  wordsToQuery_i.md
.github/workflows/: build.yml
beagletm2/: beagleTM2_browser.py  beagleTM2_browser_helperCode.py  datamanager.py  dbMaker.py  dbOps.py  extractor.py  fileOps.py  main.py  nbrowser.py  networkBuilder.py  parser.py  plotOps.py  queryData.py  statEval.py  visualizer.py
config/: gatorgrade.yml
log/: 1.1  1.2  10.1  10.2  12.1  12.2  13.2  3.2  4.1  4.2  5.1  5.2  6.1  6.2  7.1  8.1  8.2  9.1  9.2
