[tool.poetry]
name = "beagletm2"
version = "0.18.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
beagletm2 = "beagletm2.main:cli"

[tool.poetry.dependencies]
#python = "^3.10"
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
typer = "^0.7.0"
rich = "^13.3.3"
streamlit = "^1.21.0"
black = "^23.3.0"
matplotlib = "^3.7.1"
pyvis = "^0.3.2"
spacy = "^3.5.1"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
